tests/paczka1/fuzzy1/64437894.err
Error in line 4: QhieeAeyULg A413 41,2
Error in line 5: WcHjRyOs S198 68,0
Error in line 22: NJ4RAKZZhB S198 175,66
Error in line 11: TUzL5qx S198 68,1
Error in line 12: lOvKfdc A158 22,0
Error in line 23: TUzL5qx A158 75,6
